--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ article{
 
 #hero {
     height: 100vh;
-    background: url('asset/cover\ jumbotoron.png') no-repeat center center/cover;
+    background: url('asset/jumbotoron.png') no-repeat center center/cover;
     color: white;
     display: flex;
     flex-direction: column;
