--- a/style.css
+++ b/style.css
@@ -266,23 +266,50 @@ nav {
 }
 
 h2.project-title{
-    font-size: xx-large;
+    font-size: 3rem;
+    font-family: "Poppins", serif;
 }
+
+
+.project-name{
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.project-name{
+    font-size: 1.5rem;
+    margin-bottom: 5px;
+    font-weight: 700;
+}
+
+.project-description{
+    font-size: 12px;
+    text-align: justify;
+    max-width: 95%;
+}
+
 
 .project-item{
     position: relative;
 }
+
 .overlay-text{
     position: absolute;
     bottom: 0px;
-    left: 16px;
+    /* left: 16px; */
+    /* z-index: -10;
+    background: #00000066; */
+    padding-left: 16px;
+    height: fit-content;
 }
-/* .project-description{
-    font-size: small;
-    position: absolute;
-    bottom: 10px;
-    left: 16px;
+
+/* group hover project item hover the overlay is appear
+
+.project-item:hover .overlay-text{
+    display: block;
 } */
+
+
 
 .project-grid{
     display: grid;
@@ -290,7 +317,7 @@ h2.project-title{
     gap: 15px;
 }
 
-.seemore-project{
+.btn-project{
     padding: 10px 35px;
     border-radius: 20px;
     border: none;
@@ -299,7 +326,71 @@ h2.project-title{
 
 }
 
-.seemore-project:hover {
+.btn-project:hover {
     background-color: #00eeff;
     color: white;
+}
+
+#contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.contact-grid form{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.contact-title{
+    font-size: 3rem;
+    font-family: "Poppins", serif;
+}
+
+.input-small{
+    width: 30vw;
+    padding: 12px 20px;
+    border-radius: 50px;
+    border: solid #000;
+    outline: none;
+    transition: .3s;
+}
+
+.input-small:hover{
+    border-color: #2dc1cc;
+}
+.input-small:focus{
+    border: solid #00eeff;
+}
+
+.message{
+    padding: 10px 20px;
+    border-radius: 20px;
+    border: solid #000;
+    outline: none;
+    transition: .3s;
+}
+
+.message:hover{
+    border-color: #2dc1cc;
+}
+.message:focus{
+    border: solid #00eeff;
+}
+
+.btn-contact{
+    background-color: #D9D9D9;
+    border-radius: 20px;
+    padding: 10px;
+    cursor: pointer;
+    outline: none;
+    border: none;       
+    color: black;
+    transition: .3s;
+}
+
+.btn-contact:hover{
+    background-color: #aea1a1;
 }
