--- a/style.css
+++ b/style.css
@@ -468,7 +468,7 @@ footer img{
     width: 500px;
     margin-top: -200px;
     margin-left: 800px ;
-    z-index: 1;
+    z-index: 0;
     
 }
 .main-footer{
@@ -481,7 +481,7 @@ footer img{
 
 .content-foot ul li{
     list-style: none;
-    margin: 15px 0;
+    margin: 30px 0;
 }
 
 .teamone-foot {
@@ -493,6 +493,7 @@ footer img{
 }
 
 .copyright{
+    display: absolute;
     background-color: #545454;
     padding: 2px 0;
     z-index: 2;
@@ -503,4 +504,8 @@ footer img{
     text-align: center;
     color: white;
     font-weight: 300;
+}
+
+i{
+    margin-right: 5px;
 }
